# ShowCode

./: README.txt
C++/NEW/: CMakeLists.txt  prog.cpp  prog.h
C++/NEW/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
C++/NEW/_build/.cmake/api/v1/reply/: cache-v2-816a1807479ee33366ed.json  cmakeFiles-v1-e15d044562aeb6adb00e.json  codemodel-v2-813f83961fd7a16382c0.json  index-2024-06-19T19-47-41-0362.json  target-PROG1-Debug-9ce10ef65939f25fe6b6.json
C/T_Prog1/: CMakeLists.txt  README.txt
C/T_Prog1/LIB/: head.h  version.h.in
C/T_Prog1/SRC/: main.c
C/T_Prog1/_build/: CMakeCache.txt  Makefile  ScoreLog  cmake_install.cmake  compile_commands.json
C/T_Prog1/_build/.cmake/api/v1/reply/: cache-v2-284c6b62bca94425f9f4.json  cache-v2-3b09ae9b607decd41aec.json  cache-v2-dd0bd4cc529abfa97f5d.json  cmakeFiles-v1-0436598aead7ee540421.json  cmakeFiles-v1-bbdbb638ae852e2db651.json  codemodel-v2-75636bdae1de28c0bca7.json  index-2024-09-17T12-50-56-0954.json  index-2024-09-18T22-44-16-0588.json  index-2024-09-18T22-56-29-0335.json  target-T_PROG_1-Debug-0f8bc437d7a66345cea4.json  toolchains-v1-609abf62c22000d8b030.json
C/T_Prog1/_build/LIB/: version.h
